--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="crearcuenta">Crear Cuenta</string>
     <string name="confirma_tu_contraseña">Confirma tu contraseña</string>
     <string name="correoenviadorecuperar">Correo de cambio de contraseña enviado, verifique su bandeja de entrada.</string>
+    <string name="habitos">Hábitos</string>
 </resources>
