--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,7 @@
     <string name="apellidos">Apellidos</string>
     <string name="celular">Celular</string>
     <string name="guardar">Guardar</string>
+    <string name="no_finalizadas_button">no finalizadas</string>
+    <string name="finalizadas_button">finalizadas</string>
+    <string name="icono_nota">icono nota</string>
 </resources>
