--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="perfil_usuario">Perfil de usuario</string>
     <string name="cambiar_usuario">Boton cambiar nombre de usuario</string>
     <string name="nuevousuario">Nuevo usuario</string>
+    <string name="actividad">Actividad</string>
 </resources>
